# visuomotor-policy-inference

./: .dockerignore  .env.example  .gitignore  BENCHMARK.md  Dockerfile  EPISODE_SYSTEM.md  EXECUTION_PLAN.md  INTEGRATION_HDR35.md  MODEL_TRAINING_INFERENCE_DIAGNOSTICS.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SIDES.md  compare_model_ruckig.py  dg5f_probe.py  docker-compose.full.yml  docker-compose.yml  down.sh  env.left  env.right  fix_hand.sh  hand_joint_gui.sh  home.sh  knn_build_bank.py  knn_chunk_eval.py  knn_eval.py  requirements.txt  restack.sh  restack_left.sh  restack_right.sh  ruckig_demo.py  run_closed_loop.sh  run_episode_replay.sh  run_hook_pose_estimator.sh  teleop_gui.sh  test_hand.sh  test_ruckig_smoother.py  up.sh  viz_eef_trajectory.py
ros2_episode_manager/: README.md  package.xml  setup.cfg  setup.py
ros2_episode_manager/episode_manager/: episode_manager_node.py
ros2_episode_manager/launch/: episode.launch.py
ros2_robot_client/: README.md  package.xml  setup.cfg  setup.py
ros2_robot_client/launch/: policy_control.launch.py
ros2_robot_client/vpi_robot_client/: episode_image_publisher.py  http_client.py  policy_control_node.py
system_Teleop/src/ForceTorque_/net_ft_description/: package.xml
system_Teleop/src/ForceTorque_/net_ft_description/urdf/: net_ft_sensor.urdf.xacro
system_Teleop/src/Inspire_/inspire_driver/: package.xml  setup.cfg  setup.py
system_Teleop/src/Inspire_/inspire_driver/inspire_driver/: inspire_bridge.py  inspire_driver.py
system_Teleop/src/Inspire_/inspire_driver/inspire_driver/communicate/: inspire_comm.py
system_Teleop/src/Inspire_/inspire_driver/inspire_driver/utils/: save_glove_data.py  test_ws_subscriber.py
system_Teleop/src/Robot_/src/hdr_client_driver/: CMakeLists.txt  README.MD  package.xml
system_Teleop/src/Robot_/src/hdr_client_driver/examples/: CMakeLists.txt  get_robot_log.cpp  get_robot_pos.cpp  get_versions.cpp  set_robot_pos.cpp
system_Teleop/src/Robot_/src/hdr_client_driver/include/hdr_client_driver/: hdr_client_driver.h  request_lib.h  socket_manager.h  util.h
system_Teleop/src/Robot_/src/hdr_client_driver/src/: hdr_client_driver.cpp  request_lib.cpp  socket_manager.cpp
system_Teleop/src/Robot_/src/hdr_client_driver/src/functions/: console.cpp  control.cpp  etc.cpp  file_manager.cpp  hardware_interface.cpp  io_plc.cpp  project.cpp  robot.cpp  task.cpp  version.cpp
system_Teleop/src/Robot_/src/hdr_description/: CMakeLists.txt  README.MD  package.xml
system_Teleop/src/Robot_/src/hdr_description/examples/: display_hdf7_9_with_gripper.launch.py  hdf7_9_onrobot_rg2.urdf.xacro  hdf7_9_onrobot_rg6.urdf.xacro  hdf7_9_robotiq_2f_140.urdf.xacro  hdf7_9_robotiq_2f_85.urdf.xacro
system_Teleop/src/Robot_/src/hdr_description/launch/: display_robot.launch.py
system_Teleop/src/Robot_/src/hdr_description/rviz/: display_robot.rviz
system_Teleop/src/Robot_/src/hdr_description/urdf/: hdr.ros2_control.xacro  hdr.urdf.xacro  hdr_transmissions.xacro
system_Teleop/src/Robot_/src/hdr_ros2_driver/hdr_hardware_interface/: CMakeLists.txt  README.MD  hdr_hardware_interface_plugin.xml  package.xml
system_Teleop/src/Robot_/src/hdr_ros2_driver/hdr_hardware_interface/config/: default_controllers.yaml
system_Teleop/src/Robot_/src/hdr_ros2_driver/hdr_hardware_interface/launch/: ros2_control.launch.py
system_Teleop/src/Robot_/src/hdr_ros2_driver/hdr_hardware_interface/src/: hdr_robot_hardware.cpp
system_Teleop/src/Robot_/src/hdr_ros2_driver/hdr_moveit_config/hdf7_9_moveit_config/: CMakeLists.txt  package.xml
system_Teleop/src/Robot_/src/hdr_ros2_driver/hdr_moveit_config/hdr35_20_moveit_config/: CMakeLists.txt  package.xml
system_Teleop/src/Robot_/src/hdr_ros2_driver/hdr_msgs/: CMakeLists.txt  README.MD  package.xml
system_Teleop/src/Robot_/src/hdr_ros2_driver/hdr_ros2_driver/: CMakeLists.txt  README.MD  package.xml
system_Teleop/src/Robot_/src/snu_hdr_controller/: CMakeLists.txt  package.xml
system_Teleop/src/Robot_/src/snu_hdr_controller/include/: dual_hdr_controller.h
system_Teleop/src/Robot_/src/snu_hdr_controller/shc_python/: __init__.py  plot_txt.py  snu_hdr_controller.py
system_Teleop/src/Robot_/src/snu_hdr_controller/src/: dual_hdr_controller.cpp  test_controller.cpp
system_Teleop/src/System_/data_exporter/: CMakeLists.txt  package.xml
system_Teleop/src/System_/data_exporter/src/: data_exporter.cpp  decode_bin.py
system_Teleop/src/System_/system_interface/: CMakeLists.txt  package.xml
system_Teleop/src/System_/system_interface/msg/: FrameAlignedState.msg  InspireSensor.msg  PoseData.msg  StartRecording.msg  UiCommand.msg
system_Teleop/src/System_/system_interface/srv/: RobotCalibration.srv  StartStopRecording.srv
system_Teleop/src/System_/system_left/: CMakeLists.txt  package.xml
system_Teleop/src/System_/system_left/src/: system_left.cpp
system_Teleop/src/System_/system_player/: package.xml  readme.txt  setup.cfg  setup.py
system_Teleop/src/System_/system_player/system_player/: system_player_node.py
system_Teleop/src/System_/system_right/: CMakeLists.txt  package.xml
system_Teleop/src/System_/system_right/src/: system_right.cpp
system_Teleop/src/System_/system_ui/: package.xml  setup.cfg
system_Teleop/src/System_/system_ui/system_ui/nodes/: node_manager.py  systemUi.py
system_Teleop/src/System_/system_ui/system_ui/panels/: ui_panels.py
system_Teleop/src/System_/system_ui/system_ui/spawn/: process_manager.py
system_Teleop/src/Tracker_/vive_tracker_bridge/: CMakeLists.txt  package.xml
system_Teleop/src/Tracker_/vive_tracker_bridge/include/vive_tracker_bridge/: math_utils.hpp
system_Teleop/src/Tracker_/vive_tracker_bridge/src/: vive_tracker_bridge_node.cpp
system_Teleop/src/teleop_planning/: README.md  package.xml  setup.cfg  setup.py
system_Teleop/src/teleop_planning/launch/: planning_bringup.launch.py
system_Teleop/src/teleop_planning/resource/: teleop_planning
system_Teleop/src/teleop_planning/teleop_planning/: hdr_followjoint_bridge.py  joint_state_relay.py  plan_to_hook.py
(+782 files in other folders)
