<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>episode_manager</name>
  <version>0.1.0</version>
  <description>Episode lifecycle orchestrator (homing + policy gating + safety) for the visuomotor policy stack.</description>
  <maintainer email="juniormoo87@gmail.com">bi</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <!-- only for state_source:=frame_aligned -->
  <exec_depend>system_interface</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
