<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vpi_robot_client</name>
  <version>0.1.0</version>
  <description>ROS2 client that drives HDR35 + DG5F from the visuomotor policy HTTP server.</description>
  <maintainer email="juniormoo87@gmail.com">bi</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <!-- only for state_source:=frame_aligned -->
  <exec_depend>system_interface</exec_depend>
  <!-- python deps: requests, pillow, numpy (pip) -->
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
