<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_planning</name>
  <version>0.0.0</version>
  <description>Standalone (non-VLA) perception-to-motion-planning: drive the HDR35 to a
    detected 6D object pose via MoveIt. Independent of the teleop/VLA policy path.</description>
  <maintainer email="juniormoo87@gmail.com">ngseo</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <exec_depend>hdr_stream</exec_depend>

  <!-- bring-up dependencies (move_group + robot model) -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>hdr35_20_moveit_config</exec_depend>
  <exec_depend>hdr_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
