<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>net_ft_description</name>
  <version>0.0.0</version>
  <description>URDF description for F/T sensors</description>

  <maintainer email="gbartyzel@hotmail.com">Grzegorz Bartyzel</maintainer>

  <license>Apache-2.0</license>

  <author>Grzegorz Bartyzel</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
