<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_ui</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pin@todo.todo">pin</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>system_interface</depend>
  <depend>pymodbus</depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
