cmake_minimum_required(VERSION 3.8)
project(hdr_description)

find_package(ament_cmake REQUIRED)

install(
  DIRECTORY launch meshes rviz urdf examples
  DESTINATION share/${PROJECT_NAME}
)

ament_export_dependencies(${THIS_PACKAGE_INCLUDE_DEPENDS})

if(BUILD_TESTING)
  find_package(ament_cmake_pytest REQUIRED)
endif()

ament_package()
