<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hdr_ros2_driver</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kwon.hyojun@hd.com">hyojun</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>hdr_msgs</depend>
  <depend>hdr_client_driver</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>

  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>angles</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
